--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "embla-carousel-react": "^8.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.3",
     "react-zoom-pan-pinch": "^3.7.0"
   },
