--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.3",
+    "react-sparkle": "^2.0.0",
     "react-zoom-pan-pinch": "^3.7.0",
     "slugify": "^1.6.6"
   },
