--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.3",
     "react-zoom-pan-pinch": "^3.7.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "use-sound": "^4.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
