--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.1",
     "@marsidev/react-turnstile": "^1.3.1",
     "embla-carousel-react": "^8.6.0",
     "react": "^19.1.0",
