--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "embla-carousel-react": "^8.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-easy-crop": "^5.5.6",
     "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.3",
     "react-zoom-pan-pinch": "^3.7.0",
     "slugify": "^1.6.6",
+    "smartcrop": "^2.0.5",
     "use-sound": "^4.0.3"
   },
   "devDependencies": {
